--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,10 +10,11 @@ druid = { git = "https://github.com/linebender/druid.git", features = ["im", "se
 custom-utils = "0.10.4"
 log = "0.4.17"
 
-#uuid = { version = "1.1.2", features = ["v4"] }
 anyhow = "1.0.64"
 sled = "0.34.7"
 rumqttc = "0.16.0"
 
 serde = {version ="1.0.144", features = ["derive", "rc"]}
 serde_json = "1.0.85"
+
+tokio = {version ="1.21.0", features = ["full"]}
