--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,4 +17,4 @@ rumqttc = "0.16.0"
 serde = {version ="1.0.144", features = ["derive", "rc"]}
 serde_json = "1.0.85"
 
-tokio = {version ="1.21.0", features = ["full"]}
+tokio = {version ="1.21.0", features = ["macros", "rt-multi-thread"]}
