--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,3 +18,5 @@ serde = {version ="1.0.144", features = ["derive", "rc"]}
 serde_json = "1.0.85"
 
 tokio = {version ="1.21.0", features = ["macros", "rt-multi-thread"]}
+zerocopy = "0.6.0"
+byteorder = "1.4.3"
