--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,3 +20,9 @@ serde_json = "1.0.85"
 tokio = {version ="1.21.0", features = ["macros", "rt-multi-thread"]}
 zerocopy = "0.6.0"
 byteorder = "1.4.3"
+
+
+config = "0.13.2"
+toml_edit = "0.14.4"
+indexmap = "1.9.1"
+notify = "5.0.0"
