--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,7 +13,8 @@ log = "0.4.17"
 anyhow = "1.0.64"
 sled = "0.34.7"
 #rumqttc = "0.16.0"
-rumqttc = { git = "https://github.com/bytebeamio/rumqtt.git", package  = "rumqttc"}
+#rumqttc = { git = "https://github.com/bytebeamio/rumqtt.git", package  = "rumqttc"}
+rumqttc = { path = "../rumqtt/rumqttc"}
 
 serde = {version ="1.0.144", features = ["derive", "rc"]}
 serde_json = "1.0.85"
