关闭tab时，删除未保存的数据

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,8 +12,6 @@ log = "0.4.17"
 
 anyhow = "1.0.64"
 sled = "0.34.7"
-#rumqttc = "0.16.0"
-#rumqttc = { git = "https://github.com/bytebeamio/rumqtt.git", package  = "rumqttc"}
 rumqttc = { path = "../rumqtt/rumqttc"}
 
 serde = {version ="1.0.144", features = ["derive", "rc"]}
@@ -23,8 +21,10 @@ tokio = {version ="1.21.0", features = ["macros", "rt-multi-thread"]}
 zerocopy = "0.6.0"
 byteorder = "1.4.3"
 
-
 config = "0.13.2"
 toml_edit = "0.14.4"
 indexmap = "1.9.1"
 notify = "5.0.0"
+
+[patch."https://github.com/linebender/druid.git"]
+druid = { path = "../druid-fork/druid"}
