--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,5 +26,8 @@ toml_edit = "0.14.4"
 indexmap = "1.9.1"
 notify = "5.0.0"
 
+thiserror = "1.0.37"
+rand = "0.8.5"
+
 [patch."https://github.com/linebender/druid.git"]
 druid = { path = "../druid-fork/druid"}
