--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-druid = { git = "https://github.com/linebender/druid.git", features = ["im", "serde"] }
+druid = { git = "https://github.com/linebender/druid.git", features = ["im", "serde", "svg"] }
 custom-utils = "0.10.8"
 log = "0.4.17"
 
