--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,3 +26,13 @@ rand = "0.8.5"
 
 [patch."https://github.com/linebender/druid.git"]
 druid = { path = "../druid-fork/druid"}
+
+
+[profile.release]
+lto = true
+opt-level = 's'
+debug = false
+#strip = true
+debug-assertions = false
+codegen-units = 1
+panic = "abort"
