1. updated type of qos to arc<string>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,6 +30,8 @@ for-mqtt-client = { git = "https://github.com/jm-observer/for-mqtt-client.git"}
 druid-widget-nursery = {git = "https://github.com/linebender/druid-widget-nursery.git"}
 
 
+lazy_static = "1.4.0"
+
 [patch."https://github.com/jm-observer/for-mqtt-client.git"]
 for-mqtt-client = { path = "../for-mqtt-client"}
 
