--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,7 +16,7 @@ serde_json = "1.0.85"
 tokio = {version ="1.21.0", features = ["macros", "rt-multi-thread"]}
 zerocopy = "0.6.0"
 byteorder = "1.4.3"
-config = "0.13.2"
+config = {version="0.13.2" , features = ["toml", "json"]}
 toml_edit = "0.14.4"
 indexmap = "1.9.1"
 notify = "5.0.0"
@@ -29,9 +29,9 @@ for-mqtt-client = { git = "https://github.com/jm-observer/for-mqtt-client.git"}
 
 druid-widget-nursery = {git = "https://github.com/linebender/druid-widget-nursery.git"}
 
-
+bytes = "1.4.0"
 lazy_static = "1.4.0"
-
+pretty-hex = "0.3.0"
 [patch."https://github.com/jm-observer/for-mqtt-client.git"]
 for-mqtt-client = { path = "../for-mqtt-client"}
 
