--- a/Makefile.toml
+++ b/Makefile.toml
@@ -5,5 +5,6 @@
 [tasks.build-win-desktop]
 script = '''
 cargo build --package for-mqtt --bin main --release
+del .\target\for-mqtt.exe
 upx --best --lzma -o ./target/for-mqtt.exe ./target/release/main.exe
 '''
