--- a/Cargo.toml
+++ b/Cargo.toml
@@ -50,7 +50,7 @@ debug = false
 #strip = true
 debug-assertions = false
 codegen-units = 1
-panic = "abort"
+#panic = "abort"
 
 [features]
 default = ["prod"]
