--- a/Cargo.toml
+++ b/Cargo.toml
@@ -38,6 +38,7 @@ chrono = "0.4.23"
 
 piet = "0.6.2"
 directories = "5.0.0"
+backtrace = "0.3.67"
 #[patch."https://github.com/jm-observer/for-mqtt-client.git"]
 #for-mqtt-client = { path = "../for-mqtt-client"}
 [patch.crates-io]
